js262/test/language/expressions/postfix-increment/line-terminator-line-separator.js


/*---
info: Line Terminator between LeftHandSideExpression and "++" is not allowed
es5id: 11.3.1_A1.1_T3
esid: postfix-increment-operator
description: Checking Line Separator
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

x ++;

